# infrastructure

./: .gitignore  AGENTS.md  template.yml
.claude/: settings.local.json
backup/: backup.env.example  backup.service  backup.sh  backup.timer  restore.sh  setup.sh
beszel/: .gitignore  docker-compose.yml
clawdbot/: .env.example  .gitignore  SETUP.md  docker-compose.yml  setup.sh
coolify/: .env.example  docker-compose.yml  setup.sh
couchdb/: .env.example  docker-compose.yml  init.sh
fredy/: docker-compose.yml
freshrss/: docker-compose.yml
heisenberg-access-mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  smoke-test.sh
heisenberg-access-mcp/heisenberg_access_mcp/: __init__.py  server.py
heisenberg-access-mcp/policies/: heisenberg-access-mcp.hcl
heisenberg-access-mcp/tests/: test_elevenlabs_speech_to_text.py  test_google_health_nutrition.py  test_service_response_decoding.py
immich/: .env.example  README.md  config.json  docker-compose.yml
lando-deploy/: README.md  config.example.json  lando-deploy-webhook.service  server.py
minecraft/: .env.example  .gitignore  docker-compose.yml  world_switcher.py
openbao/: .env.example  .gitignore  README.md  docker-compose.yml  smoke-test.sh
paperless/: docker-compose.yml
paperless-ngx/: .env.example  .gitignore  docker-compose.yml
postgres/: docker-compose.yml
redis/: docker-compose.yml
satisfactory/: .gitignore  docker-compose.yml
systemd/: bruderwo-queue.service  bruderwo-reverb.service  bruderwo.service
tandoor/: .env.example  .gitignore  docker-compose.yml
(+20 files in other folders)
